hphp/hack/test/typecheck/array/disallow_value_inputs_for_darray.php.exp
File "disallow_value_inputs_for_darray.php", line 4, characters 11-11:
Expected => (Parsing[1002])
